# powerbi-remote-mcp-server

./: .env.example  .gitignore  README.md  auth.py  powerbi_client.py  pyproject.toml  requirements.txt  server.json  server.py
.github/workflows/: publish.yml  tests.yml
powerbi_mcp/: __main__.py  app.py  client.py  tools.py
tests/: test_client.py  test_tools.py
